--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "basketball-game",
 	"version": "1.0.0",
-	"description": "Game written with PhaserJS",
+	"description": "Game written with PhaserJS and Gsap",
 	"scripts": {
 		"start": "http-server -c-1 -p 3000",
 		"test": "echo \"Error: no test specified\" && exit 1"
